tests/NormalTests/paczka1/small_fuzzy/40616001.err
Error in line 8: 5kS S74 46,38
Error in line 12: 5kS S74 17,8
